@@ -1,3 +1,8 @@
+2016-12-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/digest.c: Additional #nocov tags
+	* src/xxhash.c: Ditto
+
 2016-12-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Rolled minor version
